Fixes taps on iOS.

--- a/main.css
+++ b/main.css
@@ -105,9 +105,15 @@ td {
 a img {
   border: none;
 }
+html {
+  overflow: hidden;
+}
 body {
   font-family: 'Montserrat', sans-serif;
   color: #666;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 .wrapper {
   height: 100vh;
